Pushing tests into its own module